# SagemakerCpp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile2  DockerfileAL  DockerfileALMxNet  DockerfileALMxNetRT  README.md  build-mxnet-rt-image.sh  build.sh  build_rt_images.sh  generate-build-image.sh  generate-runtime-mxnet-image.sh
example_algo/: CMakeLists.txt  Dockerfile  build.sh
example_mlp_mxnet/: CMakeLists.txt  Dockerfile  build.sh
include/: CMakeLists.txt
include/sagemaker/: config_helper.hpp  integration.hpp  sagemaker.hpp  signals.hpp
sagemaker/: CMakeLists.txt  config_helper.cpp  file_utils.cpp  integration.cpp  signals.cpp
sagemaker/include/: Config.hpp  file_utils.hpp  hyperparameters.hpp  integration.hpp
tst/: CMakeLists.txt  asserts.hpp  json_schema.cpp  json_test.cpp
